--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,1 +1,29 @@
-<h2>contact by messenger</h2>
+<h2>Contact me</h2>
+<form action="/contact/send-message" method="POST" >
+  {{#if isSent}}
+  <div class="isSent">
+    The message has been sent! File {{ file }} has been savedinput and validation also notification w
+  </div>
+  {{/if}}
+  {{#if isError}}
+  <div class="isError">
+    You can't leave fields empty!
+  </div>
+  {{/if}}
+  <label>
+    Your name: <input type="text" name="author">
+  </label>
+  <label>
+    Your email: <input type="email" name="sender">
+  </label>
+  <label>
+    Title: <input type="text" name="title">
+  </label>
+  <label>
+    Project design: <input type="file" accept=".png, .jpg, .jpeg, .gif" name="input">
+  </label>
+  <label>
+    Message: <textarea name="message"></textarea>
+  </label>
+  <button type="submit">Send message</button>
+</form>
